Add type='module' to local script tags

--- a/index.html
+++ b/index.html
@@ -610,23 +610,23 @@
 
   </div>
   <!-- smooth scroll js -->
-  <script src="/js/plugins/smooth-scroll.js"></script>
+  <script type="module" src="/js/plugins/smooth-scroll.js"></script>
   <!-- swup js -->
-  <script src="/js/plugins/swup.min.js"></script>
+  <script type="module" src="/js/plugins/swup.min.js"></script>
   <!-- swiper js -->
-  <script src="/js/plugins/swiper.min.js"></script>
+  <script type="module" src="/js/plugins/swiper.min.js"></script>
   <!-- datepicker js -->
-  <script src="/js/plugins/datepicker.js"></script>
+  <script type="module" src="/js/plugins/datepicker.js"></script>
   <!-- isotope js -->
-  <script src="/js/plugins/isotope.js"></script>
+  <script type="module" src="/js/plugins/isotope.js"></script>
   <!-- sticky -->
-  <script src="/js/plugins/sticky.js"></script>
+  <script type="module" src="/js/plugins/sticky.js"></script>
   <!-- mapbox js -->
-  <script src="/js/plugins/mapbox.min.js"></script>
+  <script type="module" src="/js/plugins/mapbox.min.js"></script>
   <!-- fancybox js -->
-  <script src="/js/plugins/fancybox.min.js"></script>
+  <script type="module" src="/js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
-  <script src="/public/js/main.js"></script>
+  <script type="module" src="/public/js/main.js"></script>
 
 </body>
 
