Remove ES module syntax from main.js

--- a/contact.html
+++ b/contact.html
@@ -282,7 +282,7 @@
   <!-- fancybox js -->
   <script type="module" src="/js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
-  <script type="module" src="/public/js/main.js"></script>
+  <script src="/public/js/main.js"></script>
 
 </body>
 
