Add type='module' to main.js script tags

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
   <!-- fancybox js -->
   <script type="module" src="/js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
-  <script src="/public/js/main.js"></script>
+  <script type="module" src="/public/js/main.js"></script>
 
 </body>
 
